fix wallcoverings carousel drop shadow

--- a/styles.css
+++ b/styles.css
@@ -292,7 +292,7 @@ main {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    box-shadow: -0.5rem 0.5rem 1rem rgba(0, 0, 0, 0.5);
+    box-shadow: -0.5rem 0.5rem 0.25rem rgba(0, 0, 0, 0.15);
     border-radius: 0.625rem;
     transition: transform 250ms, box-shadow 250ms;
     aspect-ratio: 1 / 1;  
